# borg-import

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .travis.yml  AUTHORS  LICENSE  MANIFEST.in  README.md  README.rst  borg-import.py  pyproject.toml  rsyncimport.py  setup.cfg  setup.py  test_borg_import_help.py  tox.ini
.github/workflows/: main.yml
.travis/: install.sh  run.sh  upload_coverage.sh
borg_import/: __main__.py  borg_import.py  main.py  rsnapshots.py
docs/: Makefile  authors.rst  changes.rst  conf.py  faq.rst  global.rst.inc  index.rst  installation.rst  make.bat  quickstart.rst  support.rst  usage.py  usage.rst
requirements.d/: development.txt
rsyncimport/: __main__.py  rsnapshots.py  rsyncimport.py
src/borg_import/: borg.py  main.py  rsnapshots.py  rsync_tmbackup.py  rsynchl.py
src/borg_import/helpers/: discover.py  names.py  timestamps.py
src/borg_import/helpers/testsuite/: test_discover.py  test_names.py  test_timestamps.py
src/borg_import/testsuite/: test_borg.py  test_tmbackup.py
